[package]
name = "mp1_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio = { version = "1.24", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio-retry = "0.3.0"
serde_json = "1.0"
futures = "0.3.12"
bincode = "1.3.3"
bytes = "1.4.0"