[package]
name = "multicast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio = { version = "1.24", features = ["full"] }
serde = { version = "1", features = ["derive"] }
priority-queue = "1.3.1"
env_logger = "0.10.0"
tokio-retry = "0.3.0"
async-trait = "0.1"
futures = "0.3.12"
bincode = "1.3.3"
log = "0.4.17"